--- a/pages/yourCard.html
+++ b/pages/yourCard.html
@@ -60,23 +60,16 @@
     <header class="container">
         <div class="container">
             <div class="row d-flex">
-                <div class="col-2 header-left wow animate__backInDown">
-                    <svg width="29" height="18" viewBox="0 0 29 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M2.84446 3.09091V14H1.19851V3.09091H2.84446ZM14.0465 3.09091V14H12.5337L6.98864 5.99929H6.88743V14H5.24148V3.09091H6.76491L12.3153 11.1023H12.4165V3.09091H14.0465ZM16.4475 14V3.09091H20.336C21.1847 3.09091 21.8879 3.24538 22.4454 3.55433C23.0029 3.86328 23.4202 4.28587 23.6972 4.82209C23.9742 5.35476 24.1127 5.9549 24.1127 6.62251C24.1127 7.29368 23.9724 7.89737 23.6919 8.43359C23.4149 8.96626 22.9958 9.38885 22.4347 9.70135C21.8772 10.0103 21.1759 10.1648 20.3307 10.1648H17.6567V8.76918H20.1816C20.7178 8.76918 21.1528 8.67685 21.4866 8.49219C21.8204 8.30398 22.0654 8.0483 22.2217 7.72514C22.3779 7.40199 22.4561 7.03445 22.4561 6.62251C22.4561 6.21058 22.3779 5.84482 22.2217 5.52521C22.0654 5.20561 21.8186 4.95526 21.4813 4.77415C21.1475 4.59304 20.7071 4.50249 20.1602 4.50249H18.0935V14H16.4475Z"
-                            fill="#FFAB6F" />
-                        <circle cx="26.5" cy="11.5" r="2.5" fill="#FFAB6F" />
-                        <circle cx="28" cy="5" r="1" fill="#FFAB6F" />
-                    </svg>
-                </div>
-                <div class="col-4 wow animate__backInDown">
-                    <div class="header-mid">
-                        <a href="#Home">Home</a>
-                        <a href="#AboutUs">About</a>
-                        <a href="#Product">Product</a>
-                        <a href="#Blog">Blog</a>
-                        <a href="#Contant">Contant</a>
-                    </div>
+                <div class="col-6 header-left wow animate__backInDown">
+                    <a href="../index.html">
+                        <svg width="29" height="18" viewBox="0 0 29 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M2.84446 3.09091V14H1.19851V3.09091H2.84446ZM14.0465 3.09091V14H12.5337L6.98864 5.99929H6.88743V14H5.24148V3.09091H6.76491L12.3153 11.1023H12.4165V3.09091H14.0465ZM16.4475 14V3.09091H20.336C21.1847 3.09091 21.8879 3.24538 22.4454 3.55433C23.0029 3.86328 23.4202 4.28587 23.6972 4.82209C23.9742 5.35476 24.1127 5.9549 24.1127 6.62251C24.1127 7.29368 23.9724 7.89737 23.6919 8.43359C23.4149 8.96626 22.9958 9.38885 22.4347 9.70135C21.8772 10.0103 21.1759 10.1648 20.3307 10.1648H17.6567V8.76918H20.1816C20.7178 8.76918 21.1528 8.67685 21.4866 8.49219C21.8204 8.30398 22.0654 8.0483 22.2217 7.72514C22.3779 7.40199 22.4561 7.03445 22.4561 6.62251C22.4561 6.21058 22.3779 5.84482 22.2217 5.52521C22.0654 5.20561 21.8186 4.95526 21.4813 4.77415C21.1475 4.59304 20.7071 4.50249 20.1602 4.50249H18.0935V14H16.4475Z"
+                                fill="#FFAB6F" />
+                            <circle cx="26.5" cy="11.5" r="2.5" fill="#FFAB6F" />
+                            <circle cx="28" cy="5" r="1" fill="#FFAB6F" />
+                        </svg>
+                    </a>
                 </div>
                 <div class="col-6 wow animate__backInDown">
                     <div class="header-right float-end">
@@ -390,57 +383,113 @@
             <p>The are products in the cart</p>
             <form action="">
                 <table class="table">
-                    <div class="table1">
-                        <thead>
-                            <tr>
-                                <th><strong>Product’s name</strong></th>
-                                <th><strong>Price</strong></th>
-                                <th><strong>Quantity</strong></th>
-                                <th><strong>Into money</strong></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><img src="../img/product/Rectangle 18 (1).png" alt=""><label for="">Cloud flower beautiful</label></td>
-                                <td><label for="">$20.00</label></td>
-                                <td>
-                                    <table>
-                                        <tr>
-                                            <td><i class="fa-solid fa-minus"></i></td>
-                                            <td><label for="">1</label></td>
-                                            <td><i class="fa-solid fa-plus"></i></td>
-                                        </tr>
-                                    </table>
-                                </td>
-                                <td><label for="">$20.00</label></td>
-                                <td><button><svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
-                                    <path d="M21.927 12.0275L12.0142 21.9136" stroke="#414141" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <path d="M12.0276 12.0142L21.9137 21.927" stroke="#414141" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg></button></td>
-                            </tr>
-                        </tbody>
-                    </div>
-                    <div class="table2">
-                        <thead>
-                            <tr>
-                                <th><h3>Oder note</h3></th>
-                                <th><h3>Billing information</h3></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><input type="text" placeholder="Note"></td>
-                                <td>
-                                    <h4>Total money:</h4>
-                                    <button>Pay</button>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </div>
+                    <thead>
+                        <tr>
+                            <th><Strong>Image</Strong></th>
+                            <th><strong>Product’s name</strong></th>
+                            <th><strong>Price</strong></th>
+                            <th><strong>Quantity</strong></th>
+                            <th><strong>Into money</strong></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><img src="../img/product/Rectangle 18 (1).png" alt=""></td>
+                            <td><label for="">Cloud flower beautiful</label></td>
+                            <td><label for="">$20.00</label></td>
+                            <td>
+                                <div class="sl-next-prev">
+                                    <button><i class="fa-solid fa-minus"></i></button>
+                                    <label for="">1</label>
+                                    <button><i class="fa-solid fa-plus"></i></button>
+                                </div>
+                            </td>
+                            <td><label for="">$20.00</label></td>
+                            <td><button><svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
+                                <path d="M21.927 12.0275L12.0142 21.9136" stroke="#414141" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M12.0276 12.0142L21.9137 21.927" stroke="#414141" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg></button></td>
+                        </tr>
+                    </tbody>
                 </table>
+                <div class="aside-bottom">
+                    <div class="aside-bottom-left">
+                        <h3>Oder note</h3>
+                        <input type="text" placeholder="Note">
+                    </div>
+                    <div class="aside-bottom-right">
+                        <h3>Billing information</h3>
+                        <h4>Total money:</h4>
+                        <button>Pay</button>
+                    </div>
+                </div>
             </form>
         </div>
     </aside>
+    <footer class="wow animate__bounceInDown" id="Contant">
+        <div class="container">
+             <div class="row footer-top">
+                <div class="col-2 col-chung ">
+                    <a href="" class="wow animate__zoomIn"><b >Information</b></a><br>
+                    <a href="">About Us</a><br>
+                    <a href="">Delivery Information</a><br>
+                    <a href="">Privacy Policy</a><br>
+                    <a href="">Contact Us</a><br>
+                    <a href="">Returns</a><br>
+                </div>
+                <div class="col-2 col-chung">
+                    <a href="" class="wow animate__zoomIn"><b >Extras</b></a><br>
+                    <a href="">Brands</a><br>
+                    <a href="">Gift Certificates</a><br>
+                    <a href="">Affiliate</a><br>
+                    <a href="">Specials</a><br>
+                    <a href="">My Account</a><br>
+                </div>
+                <div class="col-4 col-chung">
+                    <a href="" class="wow animate__zoomIn"><b >Contact Us</b></a><br>
+                    <a href="">Address: 26 Seoul -Jeju Korea 11602   </a><br>
+                    <a href="">Phone: (123) 456 - 7890</a><br>
+                    <a href="">Email: contact@decorinpdesign.com</a><br>
+                    <a href=""><img src="img/footer/M.png" style="margin-right: 12px;" alt=""></a>
+                    <a href=""><img src="img/footer/Fb.png" style="margin-right: 12px;" alt=""></a>
+                    <a href=""><img src="img/footer/Yb.png" style="margin-right: 12px;" alt=""></a>
+                    <a href=""><img src="img/footer/P.png" alt=""></a>
+                </div>
+                <div class="col-4 col-chung footer-top_Newslatter">
+                    <a href="" class="wow animate__zoomIn"><b >Newslatter</b></a><br>
+                    <p>We recommended you to our newspaper, enter your email below to get our update about us.</p><br>
+                    <input type="text" placeholder="Enter you email address here..."><br>
+                    <button>Send Now 
+                        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="9" viewBox="0 0 11 9" fill="none">
+                        <path d="M1 4.5L9.16667 4.5" stroke="#424242" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M6.08337 1L10.0834 4.5L6.08337 8" stroke="#424242" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg></button>
+                </div>
+             </div>
+             <div class="footer-bottom d-flex justify-content-between">
+                <div class="footer-bottom-left">
+                    <a href="" class="wow animate__backInLeft">Copyright <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_84_266)">
+                        <path d="M4.8 0C2.15344 0 0 2.15344 0 4.8C0 7.44656 2.15344 9.6 4.8 9.6C7.44656 9.6 9.6 7.44656 9.6 4.8C9.6 2.15344 7.44656 0 4.8 0ZM4.8 8.96985C2.50051 8.96985 0.630154 7.09908 0.630154 4.8C0.630154 2.50092 2.50051 0.630154 4.8 0.630154C7.09949 0.630154 8.96985 2.50092 8.96985 4.8C8.96985 7.09908 7.09908 8.96985 4.8 8.96985Z" fill="#555555"/>
+                        <path d="M4.92349 6.37381C3.7436 6.37381 3.28657 5.54838 3.2796 4.7574C3.27262 3.95945 3.77067 3.09997 4.92349 3.09997C5.33949 3.09997 5.76247 3.24315 6.07631 3.55002L6.67652 2.97032C6.18544 2.48622 5.5717 2.24048 4.9239 2.24048C3.19836 2.24048 2.38688 3.50899 2.39344 4.75699C2.40042 5.99843 3.15036 7.21894 4.9239 7.21894C5.61272 7.21894 6.24698 6.99371 6.73806 6.50961L6.12431 5.88889C5.81047 6.20274 5.3399 6.37299 4.9239 6.37299L4.92349 6.37381Z" fill="#555555"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_84_266">
+                        <rect width="9.6" height="9.6" fill="white"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                         Decoration Design. All Right Reserved    </a>
+                </div>
+                <div class="footer-bottom-right wow animate__backInRight">
+                    <a href="">Order History</a>
+                    <a href="">Wish List</a>
+                    <a href="">Newsletter</a>
+                </div>
+             </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.js"
     integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
